--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -68,7 +68,7 @@
         display: none;
     }
 }
-.header__userpic{
+.header__userlogo{
     width: 32px;
     height: 32px;
     background: #FFFFFF;
